Fixed an IE-related layout problem.

--- a/doc/src/default.css
+++ b/doc/src/default.css
@@ -38,8 +38,6 @@ div#body {
   padding: 4em 1em 1px 1em;
 }
 div#footer {
-  margin: 0.5em;
-  margin-bottom: 0;
   padding: 0 0.5em;
   border-top: 1px solid #CCC;
   background: #FFF;
